engines/ep/tests/module_tests/kv_bucket_test.cc
@@ -73,7 +73,8 @@ void KVBucketTest::SetUp() {
 
     if (completeWarmup && engine->getKVBucket()->getWarmup()) {
         engine->getKVBucket()->getWarmup()->setComplete();
-        engine->getKVBucket()->getWarmup()->processCreateVBucketsComplete();
+        engine->getKVBucket()->getWarmup()->processCreateVBucketsComplete(
+                ENGINE_SUCCESS);
     }
 }
 
